# odyssey

./: .gitignore  Cargo.toml  README.md  docker-compose-parachain.yml  start-new-mars-parachain-1.sh
docker/: builder.Dockerfile
launch/: config.yml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: mars.rs  odyssey.rs  template.rs
node/src/service/: mars.rs  odyssey.rs  template.rs
runtime/ares-para-common/: Cargo.toml
runtime/ares-para-common/src/: constants.rs  lib.rs
runtime/mars/: Cargo.toml
runtime/mars/src/: constants.rs  lib.rs  part_challenge.rs  part_manual_bridge.rs  part_member_extend.rs  part_offchain.rs  part_oracle.rs  part_oracle_finance.rs  part_staking_extend.rs  xcm_config.rs
runtime/mars/src/governance/: mod.rs  part_bounties.rs  part_council.rs  part_democracy.rs  part_elections.rs  part_indentity.rs  part_scheduler.rs  part_technical.rs  part_treasury.rs
runtime/mars/src/network/: mod.rs  part_aura.rs  part_authorship.rs  part_collator.rs  part_session.rs
runtime/mars/src/utilities/: mod.rs  part_proxy.rs
runtime/odyssey/: Cargo.toml
runtime/odyssey.disable/src/: constants.rs  lib.rs  part_bounties.rs  part_member_extend.rs  part_multisig.rs  part_oracle_finance.rs  part_scheduler.rs  part_session_and_collatorselection.rs  part_vesting.rs
runtime/odyssey.disable/src/weights/: mod.rs
runtime/odyssey/src/: lib.rs  part_ares_oracle.rs  part_authorship.rs  part_challenge.rs  part_collective.rs  part_democracy.rs  part_manual_bridge.rs  part_oracle.rs  part_oracle_finance.rs  part_proxy.rs  part_staking.not.cfg.rs  part_treasury.rs  part_utility.rs  xcm_config.rs
runtime/odyssey/src/governance/: mod.rs  part_bounties.rs  part_child_bounties.rs  part_council.rs  part_democracy.rs  part_elections.rs  part_indentity.rs  part_scheduler.rs  part_technical.rs  part_treasury.rs  part_vesting.rs
runtime/odyssey/src/network/: part_aura.rs  part_elections.rs  part_session.rs  part_staking.rs
runtime/odyssey/src/utilities/: part_multisig.rs  part_utility.rs
runtime/template/: Cargo.toml
runtime/template/src/: constants.rs  lib.rs
runtime/template/src/weights/: pallet_balances.rs  pallet_utility.rs
