[profile.release]
panic = 'unwind'

[workspace]
members = [
	"runtime/ares-para-common",
	"node",
	"runtime/mars",
#	"runtime/template",
	"runtime/odyssey",
]

#[patch."https://github.com/paritytech/substrate"]
#pallet-session = { git = "https://github.com/aresprotocols/ocw-suit", branch = "polkadot-v0.9.17" }

#[patch."https://github.com/aresprotocols/ocw-suit"]
#ares-oracle-provider-support = { path = "../ares-ocw-suit/pallets/ares-oracle-provider-support" }
#ares-oracle = { path = "../ares-ocw-suit/pallets/ares-oracle" }
#oracle-finance = { path = "../ares-ocw-suit/pallets/oracle-finance" }
#seed-reader = { path = "../ares-ocw-suit/tools/seed-reader" }
#bound-vec-helper = { path = "../ares-ocw-suit/tools/bound-vec-helper" }
#pallet-ares-challenge = { path = "../ares-ocw-suit/pallets/challenge" }
#pallet-price-estimates = { path = "../ares-ocw-suit/pallets/price-estimates" }
#staking-extend = { path = "../ares-ocw-suit/pallets/staking-extend" }
#ares-rpc = { path = "../ares-ocw-suit/rpc/ares-rpc" }
#manual-bridge = { path = "../ares-ocw-suit/pallets/manual-bridge" }