[profile.release]
panic = 'unwind'

[workspace]
members = [
	"runtime/ares-para-common",
	"node",
	"runtime/mars",
#	"runtime/template",
	"runtime/odyssey",
]

#[patch."https://github.com/paritytech/substrate"]
#pallet-session = { git = "https://github.com/aresprotocols/ocw-suit", branch = "polkadot-v0.9.28" }

#[patch."https://github.com/aresprotocols/ocw-suit"]
#ares-oracle-provider-support = { path = "../ares-ocw-suit/pallets/ares-oracle-provider-support" }
#ares-oracle = { path = "../ares-ocw-suit/pallets/ares-oracle" }
#oracle-finance = { path = "../ares-ocw-suit/pallets/oracle-finance" }
#bound-vec-helper = { path = "../ares-ocw-suit/tools/bound-vec-helper" }
#pallet-ares-challenge = { path = "../ares-ocw-suit/pallets/challenge" }
#staking-extend = { path = "../ares-ocw-suit/pallets/staking-extend" }
#manual-bridge = { path = "../ares-ocw-suit/pallets/manual-bridge" }