[package]
name = "polkadot-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "polkadot-collator"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
parking_lot = "0.10.2"
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.3"
serde = { version = "1.0.101", features = ["derive"] }
hex-literal = "0.2.1"
async-trait = "0.1.42"

# Parachain runtimes
#rococo-parachain-runtime = { package = "rococo-runtime", path = "rococo" }
#shell-runtime = { path = "shell" }
#statemint-runtime = { path = "statemint" }
#statemine-runtime = { path = "statemine" }
#westmint-runtime = { path = "westmint" }
#statemint-common = { path = "statemint-common" }
mars-runtime = { path = "../runtime/mars" }
template-runtime = { path = "../runtime/template" }

#odyssey-runtime = { path = "odyssey" }


# Substrate dependencies
frame-benchmarking = { git = 'https://github.com/zzm-Zhong/substrate', branch = "polkadot-v0.9.13-fix" }
frame-benchmarking-cli = { git = 'https://github.com/zzm-Zhong/substrate', branch = "polkadot-v0.9.13-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.13-fix" }
sc-consensus = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-cli = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-client-api = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-executor = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-service = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-telemetry = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-transaction-pool = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-network = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-basic-authorship = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-finality-grandpa = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-chain-spec = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-rpc = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-tracing = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-io = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-core = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-inherents = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-consensus = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-session = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-transaction-pool = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-timestamp = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-blockchain = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-block-builder = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-keystore = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-offchain = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-api = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-consensus-aura = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
substrate-prometheus-endpoint = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
frame-support = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }

# RPC related dependencies
jsonrpc-core = "15.1.0"

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/kami1983/ares-cumulus", branch = "polkadot-v0.9.13-fix" }
cumulus-client-consensus-aura = { git = "https://github.com/kami1983/ares-cumulus", branch = "polkadot-v0.9.13-fix" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/kami1983/ares-cumulus", branch = "polkadot-v0.9.13-fix" }
cumulus-client-consensus-common = { git = "https://github.com/kami1983/ares-cumulus", branch = "polkadot-v0.9.13-fix" }
cumulus-client-collator = { git = "https://github.com/kami1983/ares-cumulus", branch = "polkadot-v0.9.13-fix" }
cumulus-client-service = { git = "https://github.com/kami1983/ares-cumulus", branch = "polkadot-v0.9.13-fix" }
cumulus-client-network = { git = "https://github.com/kami1983/ares-cumulus", branch = "polkadot-v0.9.13-fix" }
cumulus-primitives-core = { git = "https://github.com/kami1983/ares-cumulus", branch = "polkadot-v0.9.13-fix" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/kami1983/ares-cumulus", branch = "polkadot-v0.9.13-fix" }

# TODO we should be able to depend only on the primitives crate once we move the inherent data.will.del provider there.
#nimbus-primitives = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.13-fix" }
#nimbus-primitives = { path="../primitives/nimbus" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.13-fix" }
polkadot-service = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.13-fix" }
polkadot-cli = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.13-fix" }
polkadot-parachain = { git = "https://github.com/kami1983/ares-polkadot", branch = "release-v0.9.13-fix" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"
tempfile = "3.2.0"
tokio = { version = "0.2.13", features = ["macros"] }

[features]
default = []
runtime-benchmarks = [
	'polkadot-service/runtime-benchmarks',
#	'statemint-runtime/runtime-benchmarks',
#	'statemine-runtime/runtime-benchmarks',
#	'westmint-runtime/runtime-benchmarks',
]
